# pbrt-v2-cmake

./: .gitignore  CMakeLists.txt  README.md
scenes/: perftest_bvh.pbrt  perftest_grid.pbrt  perftest_kdtree.pbrt
src/core/: parallel.h  pbrt.h  stdafx.h
